<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/nav_budgets"
        android:icon="@drawable/ic_budget"
        android:title="@string/nav_budgets" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_chart"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
